Bug 358971 - Untranslatable string in Import dialog
Summary: Untranslatable string in Import dialog
Status: RESOLVED FIXED
Alias: None
Product: kphotoalbum
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.6.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KPhotoAlbum Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-04 02:30 UTC by André Marcelo Alvarenga
Modified: 2016-02-07 17:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2016-02-04 02:30:56 UTC
This string is untranslatable: 

KPhotoAlbum Export Files

Reproducible: Always

Steps to Reproduce:
1. File -> Import...
2. See 'Filter:' field
Comment 1 Johannes Zarl-Zierl 2016-02-07 17:12:41 UTC
Git commit f45a8ecd60f91fa5e2bdded52d9934476ffc258f by Johannes Zarl-Zierl.
Committed on 07/02/2016 at 17:10.
Pushed by johanneszarl into branch 'master'.

Make import/export file filter translatable.

M  +1    -1    ImportExport/Export.cpp
M  +1    -1    ImportExport/Import.cpp

http://commits.kde.org/kphotoalbum/f45a8ecd60f91fa5e2bdded52d9934476ffc258f