Make import/export file filter translatable.

BUG: 358971